--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,13 @@ input {
   fill: #f8c4ce;
 }
 
+.arrow-container {
+  padding: 15px;
+}
+
+.arrow-container svg {
+  width: 26px;
+  height: 26px;
+  fill: #5a5a5d;
+}
+
