--- a/src/index.css
+++ b/src/index.css
@@ -141,3 +141,11 @@ input {
   padding: 18px;
   height: 25px;
 }
+
+.input .delete {
+  position: relative;
+  left: 210px;
+  top: -176px;
+  font-size: 25px;
+  color: #bdc1c6;
+}
